; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/imx/extr_mxc-ssi.c_get_ssi_clk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/imx/extr_mxc-ssi.c_get_ssi_clk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"ssi1\00", align 1
@ssi_clk0 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"ssi2\00", align 1
@ssi_clk1 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_ssi_clk(i32 %0, %struct.device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.device* %1, %struct.device** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %27 [
    i32 0, label %7
    i32 1, label %17
  ]

7:                                                ; preds = %2
  %8 = load %struct.device*, %struct.device** %5, align 8
  %9 = call i32 @clk_get(%struct.device* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* @ssi_clk0, align 4
  %10 = load i32, i32* @ssi_clk0, align 4
  %11 = call i32 @IS_ERR(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %7
  %14 = load i32, i32* @ssi_clk0, align 4
  %15 = call i32 @PTR_ERR(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %30

16:                                               ; preds = %7
  store i32 0, i32* %3, align 4
  br label %30

17:                                               ; preds = %2
  %18 = load %struct.device*, %struct.device** %5, align 8
  %19 = call i32 @clk_get(%struct.device* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i32 %19, i32* @ssi_clk1, align 4
  %20 = load i32, i32* @ssi_clk1, align 4
  %21 = call i32 @IS_ERR(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load i32, i32* @ssi_clk1, align 4
  %25 = call i32 @PTR_ERR(i32 %24)
  store i32 %25, i32* %3, align 4
  br label %30

26:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %30

27:                                               ; preds = %2
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %27, %26, %23, %16, %13
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @clk_get(%struct.device*, i8*) #1

declare dso_local i32 @IS_ERR(i32) #1

declare dso_local i32 @PTR_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
